cabal-version:      3.0
name:               libgccjit
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/spydr06/libgccjit-haskell
license:            GPL-3.0-only
license-file:       LICENSE
author:             Spydr06
maintainer:          
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  GccJit
    extra-libraries:  gccjit
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010
