cabal-version:      3.0
name:               libgccjit
version:            0.1.1.0
-- synopsis:
-- description:
homepage:           https://github.com/spydr06/libgccjit-haskell
license:            GPL-3.0-only
license-file:       LICENSE
author:             Spydr06
maintainer:          
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        GccJit
        GccJit.Foreign
        GccJit.Types
        GccJit.Utils
    extra-libraries:  gccjit
    build-tool-depends: c2hs:c2hs >= 0.28.8
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010
    includes:
        libgccjit.h
